הרשמה עם GITHUB

--- a/.env
+++ b/.env
@@ -1,1 +1,59 @@
 MONGODB_URL = mongodb+srv://msyeg770770:msyeg770770@cluster0.yqm1al9.mongodb.net/shop_1?retryWrites=true&w=majority
+
+
+
+//-----------NEXT AUTH---------------------------
+JWT_SECRET= XEpngRvEGiYkr3eEErD9
+NEXTAUTH_URL= http://localhost:3000
+BASE_URL=
+/-------
+GITHUB_ID=   efc159352ba132043081 
+GITHUB_SECRET=  b7843f5346dbb85c6472e0cfb06456fac1a36da2
+GOOGLE_ID=
+GOOGLE_SECRET=
+TWITTER_ID=
+TWITTER_SECRET=
+T_ID=
+T_SECRET=
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+AUTH0_ISSUER=
+/-------
+
+/---MAILING SERVICE------
+MAILING_SERVICE_CLIENT_ID=
+MAILING_SERVICE_CLIENT_SECRET=
+MAILING_SERVICE_REFRESH_TOKEN=
+SENDER_EMAIL_ADDRESS=
+
+/---------
+
+
+/---------
+ACTIVATION_TOKEN_SECRET=
+RESET_TOKEN_SECRET=
+/---------
+
+
+
+/---Paypal---------------
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+/------------------
+
+
+/-----Stripe------
+STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
+/------------------------
+
+
+
+/------Cloudinary-----
+CLOUDINARY_NAME=
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
+--------------------------
+/-----MailChimp-----
+MAILCHIMP_API_KEY=
+MAILCHIMP_LIST_ID=
