--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
