--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "formik": "^2.2.9",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "next": "13.2.4",
@@ -25,6 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.59.2"
+    "sass": "^1.59.2",
+    "yup": "^1.0.2"
   }
 }
