JSONWEBTOKEN, BCRYPT MONGODB

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ SENDER_EMAIL_ADDRESS=
 
 
 /---------
-ACTIVATION_TOKEN_SECRET=
+ACTIVATION_TOKEN_SECRET= -09681k2evm5678jc0u58hguqd2eh2srl
 RESET_TOKEN_SECRET=
 /---------
 
