--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "next": "13.2.4",
