אישור חשבון במייל סיום הרשמה וכניסה כולל היגיון

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ MONGODB_URL = mongodb+srv://msyeg770770:msyeg770770@cluster0.yqm1al9.mongodb.net
 //-----------NEXT AUTH---------------------------
 JWT_SECRET= XEpngRvEGiYkr3eEErD9
 NEXTAUTH_URL= http://localhost:3000
-BASE_URL=
+BASE_URL= http://localhost:3000
 /-------
 GITHUB_ID=   efc159352ba132043081 
 GITHUB_SECRET=  b7843f5346dbb85c6472e0cfb06456fac1a36da2
@@ -22,10 +22,10 @@ AUTH0_ISSUER= https://dev-ztn5pp0eabcf8l7n.us.auth0.com
 /-------
 
 /---MAILING SERVICE------
-MAILING_SERVICE_CLIENT_ID=
-MAILING_SERVICE_CLIENT_SECRET=
-MAILING_SERVICE_REFRESH_TOKEN=
-SENDER_EMAIL_ADDRESS=
+MAILING_SERVICE_CLIENT_ID= 723755552890-dr965tcpgna6qb8vvpanr55avfmit8l4.apps.googleusercontent.com
+MAILING_SERVICE_CLIENT_SECRET= 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
+MAILING_SERVICE_REFRESH_TOKEN= 1//04ykmuZMND6_0CgYIARAAGAQSNwF-L9Irlyu77kYrnvu7beNIB123_PlSIHicDXJBhzMbb7Mi1freRNMuYiHeoFhpEuw6p-qhjL0
+SENDER_EMAIL_ADDRESS= mtyg7702@gmail.com
 
 /---------
 
