--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/nodemailer": "^6.4.7",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "formik": "^2.2.9",
+    "googleapis": "^113.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
@@ -21,6 +23,7 @@
     "next-auth": "^4.20.1",
     "next-connect": "^0.13.0",
     "next-redux-wrapper": "^8.1.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
