שכחתי סיסמא, איפוס סיסמא

--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ SENDER_EMAIL_ADDRESS= mtyg7702@gmail.com
 
 /---------
 ACTIVATION_TOKEN_SECRET= -09681k2evm5678jc0u58hguqd2eh2srl
-RESET_TOKEN_SECRET=
+RESET_TOKEN_SECRET= -09681k2evfghm5678jc0u58hguqd2eh2srl6789
 /---------
 
 
