--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.59.2",
+    "swiper": "^9.1.1",
     "yup": "^1.0.2"
   }
 }
